--- a/angular.json
+++ b/angular.json
@@ -42,6 +42,12 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ]
+            },
+            "bg": {
+              "aot": true,
+              "i18nFile": "src/messages.bg.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "bg"
             }
           }
         },
@@ -53,6 +59,9 @@
           "configurations": {
             "production": {
               "browserTarget": "ang2-conduit:build:production"
+            },
+            "bg": {
+              "browserTarget": "ang2-conduit:build:bg"
             }
           }
         },
